[package]
name = "kiview"
version = "0.1.0"
authors = ["notomo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
failure = "0.1.6"
itertools = "0.8"
fs_extra = "1.1.0"
log = "0.4.8"
log4rs = "0.9.0"
url = "2.1.1"
path-slash = "0.1.1"
rmpv = "0.4.3"
nvim-rs = { git = "https://github.com/KillTheMule/nvim-rs", rev = "9efc7480f976d80f9e57443d62c1da2f37805186", features = ["use_tokio"] }
async-trait = "0.1.22"
tokio = { version = "0.2.9", features = [ "blocking", "process", "time" ] }
lazy_static = "1.4.0"
